# ExpenseTrackerApp

./: .replit  README.md  main.py  pyproject.toml  replit.nix  test_app_flow.py  test_parse.py
.streamlit/: config.toml
attached_assets/: Pasted--Posibles-Causas-y-Soluciones-1-Verificar-que-los-datos-realmente-se-guardan-en-el-archivo-Prueb-1739070655003.txt
data/: categories.csv  transactions.csv
utils/: auth.py  data_manager.py  database.py  email_manager.py  email_parser.py  email_reader.py  encryption.py  migrate_data.py  password_reset.py
